Alterado versão do Air e atualizado o .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ local.properties
 .flexProperties
 .project
 .settings/*
+.model/WTManager_GUI.fml
 
 # External tool builders
 .externalToolBuilders/
